--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
