feat(website): configure lint staged

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "validate": "lint-staged"
   },
   "dependencies": {
     "clsx": "^2.1.1",
