--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "validate": "lint-staged"
   },
   "dependencies": {
     "react": "^18.3.1",
