--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -6,8 +6,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "validate": "lint-staged"
+    "validate": "lint-staged",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^18.3.1",
