--- a/apps/website/.eslintrc.json
+++ b/apps/website/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": "next/core-web-vitals",
   "settings": {
     "next": {
-      "rootDir": "apps/website/"
+      "rootDir": "apps/website"
     }
   }
 }
