feat(website): integrate spell checker api

--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -19,10 +19,13 @@
       }
     ],
     "paths": {
+      "@/api/*": ["./api/*"],
       "@/components/*": ["./components/*"],
+      "@/constants/*": ["./constants/*"],
       "@/images/*": ["./assets/images/*"],
-      "@/styles/*": ["./styles/*"],
-      "@/lib/*": ["./lib/*"]
+      "@/lib/*": ["./lib/*"],
+      "@/models/*": ["./models/*"],
+      "@/styles/*": ["./styles/*"]
     }
   },
   "include": [
