--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,7 +10,10 @@
     "validate": "lint-staged"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.6.11",
+    "@floating-ui/react": "^0.26.24",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
