--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@naija-spell-checker/ui": "workspace:^",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@eslint/js": "^9.9.0",
+    "@naija-spell-checker/tailwind": "workspace:^",
     "@types/chrome": "^0.0.270",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
@@ -29,9 +31,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "sass-embedded": "^1.77.8",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   }
