--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
