feat(editor): add header navigation links

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -18,6 +18,12 @@
     "moduleResolution": "Bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
+
+    /* Paths */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src"]
+    }
   },
   "include": ["src"]
 }
