--- a/packages/tailwind/tsconfig.json
+++ b/packages/tailwind/tsconfig.json
@@ -7,7 +7,6 @@
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "jsx": "react",
-    "outDir": "dist",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -17,7 +16,7 @@
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "isolatedModules": true,
-    "moduleDetection": "force",
+    "moduleDetection": "force"
   },
   "include": ["./"]
 }
