--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -10,26 +10,30 @@
     "validate": "lint-staged"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.10",
     "@naija-spell-checker/tailwind": "workspace:^",
     "@naija-spell-checker/ui": "workspace:^",
     "lucide-react": "^0.439.0",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18",
+    "negotiator": "^1.0.0",
+    "next": "15.1.4",
+    "next-intl": "^3.26.3",
+    "react": "^19",
+    "react-dom": "^19",
     "react-simple-wysiwyg": "^3.1.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/uuid": "^10",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
-    "sass": "^1.77.8"
+    "sass": "^1.83.4"
   },
   "type": "module"
 }
