--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -19,6 +19,7 @@
     "next-intl": "^3.26.3",
     "react": "^19",
     "react-dom": "^19",
+    "react-hook-form": "^7.54.2",
     "react-simple-wysiwyg": "^3.1.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
