--- a/packages/tailwind/tsconfig.json
+++ b/packages/tailwind/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "jsx": "react",
+"jsx": "react-jsx"
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
