--- a/apps/chrome-extension/package.json
+++ b/apps/chrome-extension/package.json
@@ -18,12 +18,12 @@
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@eslint/js": "^9.9.0",
     "@naija-spell-checker/tailwind": "workspace:^",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/chrome": "^0.0.270",
     "@types/node": "^22.5.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
