--- a/apps/translator/package.json
+++ b/apps/translator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "editor",
+  "name": "translator",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,33 +10,24 @@
     "validate": "lint-staged"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.10",
     "@naija-spell-checker/layout": "workspace:^",
     "@naija-spell-checker/tailwind": "workspace:^",
     "@naija-spell-checker/ui": "workspace:^",
-    "lucide-react": "^0.439.0",
-    "negotiator": "^1.0.0",
     "next": "15.2.4",
-    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-simple-wysiwyg": "^3.1.2",
-    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
-    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/uuid": "^10",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "sass": "^1.83.4"
+    "sass": "^1.86.3",
+    "typescript": "^5"
   },
   "type": "module"
 }
