--- a/apps/translator/package.json
+++ b/apps/translator/package.json
@@ -15,6 +15,7 @@
     "@naija-spell-checker/ui": "workspace:^",
     "lucide-react": "^0.439.0",
     "next": "15.2.4",
+    "next-intl": "^3.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zod": "^3.23.8"
